--- a/MyEventURL/Views/Components/_EventCard.cshtml
+++ b/MyEventURL/Views/Components/_EventCard.cshtml
@@ -5,7 +5,7 @@
             :location="Location"
             :start="Start"
             :timezone="TimeZone"
-            width="650"
+            width="650px"
             chars="100"
 />
 -->
