--- a/MyEventURL/Views/Events/_Details.cshtml
+++ b/MyEventURL/Views/Events/_Details.cshtml
@@ -89,8 +89,8 @@
         el: '#eventdetails',
         data: {
             Event: [],
-            StartMoment: moment('@Model.Start').parseZone('@Model.Timezone').tz('@Model.Timezone'),
-            EndMoment: moment('@Model.End').parseZone('@Model.Timezone').tz('@Model.Timezone'),
+            StartMoment: moment('@Model.Start @Model.Timezone').tz('@Model.Timezone'),
+            EndMoment: moment('@Model.End @Model.Timezone').tz('@Model.Timezone'),
             LocalTz: moment.tz.guess(),
             momentjsformat: "MM/DD/YYYY hh:mm A",
         },
