--- a/MyEventURL/Views/Components/_AddEvent.cshtml
+++ b/MyEventURL/Views/Components/_AddEvent.cshtml
@@ -125,11 +125,11 @@
                         mouse      : false,
                         css        : false,
                         outlook    : {show:true, text:"Device Calendar"},
-                        google     : {show:true, text:"Google <em>(online)</em>"},
-                        yahoo      : {show:true, text:"Yahoo <em>(online)</em>"},
-                        outlookcom : {show:true, text:"Outlook.com <em>(online)</em>"},
-                        appleical  : {show:true, text:"Apple Calendar"},
-                        facebook   : {show:true, text:"Facebook Event"},
+                        google     : {show:false, text:"Google <em>(online)</em>"},
+                        yahoo      : {show:false, text:"Yahoo <em>(online)</em>"},
+                        outlookcom : {show:false, text:"Outlook.com <em>(online)</em>"},
+                        appleical  : {show:false, text:"Apple Calendar"},
+                        facebook   : {show:false, text:"Facebook Event"}
                         dropdown   : {order:"outlook,google,outlookcom"}
                     });
                     addeventatc.register('button-click', function(obj){
