Troubleshooting Iframe Modal

--- a/MyEventURL/Views/Events/_Index.cshtml
+++ b/MyEventURL/Views/Events/_Index.cshtml
@@ -9,7 +9,7 @@
 <script>
     function runCreateEvent() {
         iframemodal.setTitle("Create an Event");
-        iframemodal.setSrc("/Events/Create");
+        iframemodal.setSrc("https://www.msn.com");
         $("#iframemodal").modal({ backdrop: 'static', show: true });
     }
 </script>
