--- a/MyEventURL/Views/Events/_Details.cshtml
+++ b/MyEventURL/Views/Events/_Details.cshtml
@@ -17,7 +17,7 @@
     }
 </script>
 
-<scipt>
+<script>
     /* Attach events after the button has been loaded */
     window.addeventasync = function(){
 
@@ -25,11 +25,12 @@
     addeventatc.register('button-click', function(obj){
 
     /* Log */
-    console.log('button-click -> ' + obj.id);
+        console.log('button-click -> ' + obj.id);
+        EventDetails.runAddEngagement;
 
     });
     }
-</scipt>
+</script>
 
 <div id="eventdetails">
     <div style="width:200px; float:left; position:absolute; left:100px; height:50px;" v-if="evalUser()" ><a href="javascript:runEditEvent(@Model.EventId)" style="width:200px; height:50px;" class="btn btn-info">Edit</a></div>
