--- a/MyEventURL/Views/Events/_Details.cshtml
+++ b/MyEventURL/Views/Events/_Details.cshtml
@@ -26,8 +26,7 @@
 
     /* Log */
         console.log('button-click -> ' + obj.id);
-        EventDetails.runAddEngagement;
-
+        EventDetails.runAddEngagement();
     });
     }
 </script>
