Revert "addevent fixed"
This reverts commit dcd30d674a8e20d87b523bce35a1bc6c671bf6b9.

--- a/MyEventURL/Views/Events/_Details.cshtml
+++ b/MyEventURL/Views/Events/_Details.cshtml
@@ -25,7 +25,7 @@
     addeventatc.register('button-click', function(obj){
 
     /* Log */
-        //console.log('button-click -> ' + obj.id);
+        console.log('button-click -> ' + obj.id);
         EventDetails.runAddEngagement();
     });
     }
