--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -39,9 +39,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">@Html.ActionLink("Home", "Index", "Home")</li>
-                <li class="nav-item active">@Html.ActionLink("About", "About", "Home")</li>
-                <li class="nav-item active>@Html.ActionLink("Manage", "Index", "Events")</li>
+                <li class="nav-item active nav-link">@Html.ActionLink("Home", "Index", "Home")</li>
+                <li class="nav-item active nav-link">@Html.ActionLink("About", "About", "Home")</li>
+                <li class="nav-item active nav-link">@Html.ActionLink("Manage", "Index", "Events")</li>
             </ul>
         </div>
         @Html.Partial("_LoginPartial")
