--- a/MyEventURL/Views/Shared/_LoginPartial.cshtml
+++ b/MyEventURL/Views/Shared/_LoginPartial.cshtml
@@ -1,20 +1,18 @@
 ﻿@if (Request.IsAuthenticated)
 {
-    <text>
-    <ul class="nav navbar-nav navbar-right">
-        <li class="navbar-text">
-            Hello, @ViewBag.Email!
-        </li>
-        <li>
-            @Html.ActionLink("Sign out", "SignOut", "Account")
-        </li>
-    </ul>
-    </text>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item active nav-link">
+                Hello, @ViewBag.Email!
+            </li>
+            <li class="nav-item active nav-link">
+                @Html.ActionLink("Sign out", "SignOut", "Account")
+            </li>
+        </ul>
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://register.makemeetingsgreat.com">Register</a></li>
-        <li>@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: new { path = Context.Request.RawUrl }, htmlAttributes: new { id = "loginLink" })</li>
+        <li class="nav-item active nav-link"><a href="http://register.makemeetingsgreat.com">Register</a></li>
+        <li class="nav-item active nav-link">@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: new { path = Context.Request.RawUrl }, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
