--- a/MyEventURL/Views/Shared/_LoginPartial.cshtml
+++ b/MyEventURL/Views/Shared/_LoginPartial.cshtml
@@ -1,18 +1,18 @@
 ﻿@if (Request.IsAuthenticated)
 {
         <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item active nav-link">
+            <li class="nav-item nav-link">
                 Hello, @ViewBag.Email!
             </li>
-            <li class="nav-item active nav-link">
-                @Html.ActionLink("Sign out", "SignOut", "Account")
+            <li class="nav-item nav-link">
+                @Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "nav-link" })
             </li>
         </ul>
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item active nav-link"><a href="http://register.makemeetingsgreat.com">Register</a></li>
-        <li class="nav-item active nav-link">@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: new { path = Context.Request.RawUrl }, htmlAttributes: new { id = "loginLink" })</li>
+        <li class="nav-item nav-link"><a href="http://register.makemeetingsgreat.com">Register</a></li>
+        <li class="nav-item nav-link">@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: new { path = Context.Request.RawUrl }, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
     </ul>
 }
