--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -29,10 +29,9 @@
     </script>
 </head>
 <body>
-    https://www.myeventurl.com/Content/white_logo_transparent.png
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="~/Content/white_logo_transparent.png" alt="myeventurl logo">
+            <img src="~/Content/white_logo_transparent.png" style="height:40px" alt="myeventurl logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,9 +39,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item nav-link">@Html.ActionLink("Home", "Index", "Home")</li>
-                <li class="nav-item nav-link">@Html.ActionLink("About", "About", "Home")</li>
-                <li class="nav-item nav-link">@Html.ActionLink("Manage", "Index", "Events")</li>
+                <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Manage", "Index", "Events", null, new { @class = "nav-link" })</li>
             </ul>
         </div>
         @Html.Partial("_LoginPartial")
