--- a/MyEventURL/Views/Shared/_LoginPartial.cshtml
+++ b/MyEventURL/Views/Shared/_LoginPartial.cshtml
@@ -1,9 +1,7 @@
 ﻿@if (Request.IsAuthenticated)
 {
         <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item nav-link">
-                Hello, @ViewBag.Email!
-            </li>
+            <li class="nav-item nav-link">Hello, @ViewBag.Email!</li>
             <li class="nav-item nav-link">
                 @Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "nav-link" })
             </li>
