--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     </script>
 </head>
 <body>
+    test
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="~/Content/white_logo_transparent.png" style="height:40px" alt="myeventurl logo">
