--- a/MyEventURL/Views/Shared/_LoginPartial.cshtml
+++ b/MyEventURL/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@if (Request.IsAuthenticated)
 {
         <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item nav-link">Hello, @ViewBag.Email!</li>
-            <li class="nav-item nav-link">
+            <li class="nav-item active nav-link">Hello, @ViewBag.Email!</li>
+            <li class="nav-item">
                 @Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "nav-link" })
             </li>
         </ul>
@@ -11,6 +11,6 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li class="nav-item nav-link"><a href="http://register.makemeetingsgreat.com">Register</a></li>
-        <li class="nav-item nav-link">@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: new { path = Context.Request.RawUrl }, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
+        <li class="nav-item">@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: new { path = Context.Request.RawUrl }, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
     </ul>
 }
