--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -28,8 +28,7 @@
         })
     </script>
 </head>
-<body>
-    test
+<body style="padding-top:0px">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="~/Content/white_logo_transparent.png" style="height:40px" alt="myeventurl logo">
