--- a/MyEventURL/Views/Home/Index.cshtml
+++ b/MyEventURL/Views/Home/Index.cshtml
@@ -13,8 +13,7 @@
                    :start="Card.Start"
                    :timezone="Card.Timezone"
                    :cstyle="Card.Style"
-                   width="100%"
-                   chars="90">
+                   width="100%">
         </eventcard>
     </div>
 </div>
