--- a/MyEventURL/Views/Components/_EventCard.cshtml
+++ b/MyEventURL/Views/Components/_EventCard.cshtml
@@ -15,7 +15,7 @@
         <p><b>&raquo; When:</b> {{starttime.format("LL")}}</p>
         <p><b>&raquo; Where:</b> {{location}}</p>
         <p><b>&raquo; Description:</b> {{shortened}}</p>
-        <a style="margin:5px" :href="href" class="btn btn-default">More</a>
+        <a style="margin:5px" :href="href" class="btn btn-dark">More</a>
     </div>
 </script>
 
