--- a/MyEventURL/Views/Home/Index.cshtml
+++ b/MyEventURL/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
     }
 </style>
 <div style="align-content:center; width:100%">
-    <img src="~/Content/color_logo_transparent.png" style="width:80%" />
-    Search <input name="query" v-model="SearchQuery" style="min-width:100%; margin:10px">
+    <img src="~/Content/color_logo_transparent.png" style="width:80%" /><br/>
+    Search: <input name="query" v-model="SearchQuery" style="min-width:100%; margin:10px">
 </div>
 <div id="index" class="card-columns">
     <div v-for="Card in FilteredEvents" class="card">
