--- a/MyEventURL/Views/Home/Index.cshtml
+++ b/MyEventURL/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
     }
 </style>
 
-<div id="index" class="card-columns">
-    <div style="align-content:center; width:100%">
-        <img src="~/Content/color_logo_transparent.png" style="width:80%" /><br />
+<div id="index">
+    <div style="width:100%">
+        <img src="~/Content/color_logo_transparent.png" style="display: block; margin-left: auto; margin-right: auto; width: 80%;" /><br />
         Search: <input name="query" v-model="SearchQuery" style="min-width:100%; margin:10px">
     </div>
     <div class="card-columns">
